[gd_scene load_steps=6 format=3 uid="uid://c0u2nhom40bs5"]

[ext_resource type="Script" path="res://Scenes/Objects/UI/Battle/BattleUI.gd" id="1_a4eku"]
[ext_resource type="PackedScene" uid="uid://bmlsnsjnq1d0a" path="res://Scenes/Objects/UI/Battle/AbilityUI.tscn" id="2_ug7s7"]
[ext_resource type="PackedScene" uid="uid://m0p4u7s6ya5f" path="res://Scenes/Objects/UI/HealthUI.tscn" id="3_clped"]
[ext_resource type="PackedScene" path="res://Scenes/Objects/UI/Battle/EnemyButton.tscn" id="4_uu45p"]
[ext_resource type="PackedScene" uid="uid://bvfi7pb15066a" path="res://Scenes/Objects/UI/Cursor.tscn" id="5_mhlfh"]

[node name="BattleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a4eku")
abilityObject = ExtResource("2_ug7s7")
enemyHealthObject = ExtResource("3_clped")
enemyButton = ExtResource("4_uu45p")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(720, 426)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -360.0
offset_top = -426.0
offset_right = 360.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 8
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="AbilityContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 2
offset_right = 720.0
offset_bottom = 128.0
color = Color(0, 0, 0, 1)

[node name="HealthBarContainer" type="HBoxContainer" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Cursor" parent="." instance=ExtResource("5_mhlfh")]
visible = false
layout_mode = 0

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.667
offset_bottom = 0.239929
